force-app/main/default/objects/SD_Staff_Injury__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Damage_Property_Damage_Sync__c</fullName>
        <label>Asset Damage / Property Damage (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Damage_Property_Damage__c</fullName>
        <label>Asset Damage / Property Damage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Complaint_OFI__c</fullName>
        <label>Community Complaint (OFI)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment_Aspect_Complaint_Sync__c</fullName>
        <label>Environment Aspect &amp; Complaint (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment_Aspect_Complaint__c</fullName>
        <label>Environment Aspect &amp; Complaint</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Female_FAC_Occupational_Health__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Female FAC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_FAC_Personal_Incident__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Female FAC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Fatality_Occupational_Health__c</fullName>
        <label>Female Fatality - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Fatality_Personal_Incident__c</fullName>
        <label>Female Fatality - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_LTI__c</fullName>
        <formula>Female_LWC_LT_Personal_Incident__c +
Female_PTD_Personal_Incident__c +
Female_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_LWC_LT_Occupational_Health__c</fullName>
        <inlineHelpText>LWC/LT - Loss Work Case / Lost Time</inlineHelpText>
        <label>Female LWC/LT - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_LWC_LT_Personal_Incident__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Female LWC/LT - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_MTC_Occupational_Health__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Female MTC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_MTC_Personal_Incident__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Female MTC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_PTD_Occupational_Health__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Female PTD - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_PTD_Personal_Incident__c</fullName>
        <inlineHelpText>PIT = Permanent Total Disability</inlineHelpText>
        <label>Female PTD - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_RWC_Occupational_Health__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Female RWC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_RWC_Personal_Incident__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Female RWC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_FAC_Occupational_Health__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Female (Sync) FAC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_FAC_Personal_Incident__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Female (Sync) FAC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_Fatality_Occupational_Health__c</fullName>
        <label>Female Sync Fatality-Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_Fatality_Personal_Incident__c</fullName>
        <label>Female (Sync) Fatality-Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_LTI__c</fullName>
        <formula>Female_Sync_LWC_LT_Personal_Incident__c +
Female_Sync_PTD_Personal_Incident__c +
Female_Sync_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female (Sync) LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_LWC_LT_Occupational_Health__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Female (Sync) LWC/LT-Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_LWC_LT_Personal_Incident__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Female (Sync) LWC/LT - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_MTC_Occupational_Health__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Female (Sync) MTC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_MTC_Personal_Incident__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Female (Sync) MTC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_PTD_Occupational_Health__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Female (Sync) PTD - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_PTD_Personal_Incident__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Female (Sync) PTD - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_RWC_Occupational_Health__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Female (Sync) RWC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_RWC_Personal_Incident__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Female (Sync) RWC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_TRC__c</fullName>
        <formula>Female_Sync_MTC_Personal_Incident__c +
Female_Sync_RWC_Personal_Incident__c +
Female_Sync_LWC_LT_Personal_Incident__c +
Female_Sync_PTD_Personal_Incident__c +
Female_Sync_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female (Sync) TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_Sync_TROI__c</fullName>
        <formula>Female_Sync_MTC_Occupational_Health__c + Female_Sync_RWC_Occupational_Health__c + Female_Sync_LWC_LT_Occupational_Health__c + Female_Sync_PTD_Occupational_Health__c + Female_Sync_Fatality_Occupational_Health__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female (Sync) TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_TRC__c</fullName>
        <formula>Female_MTC_Personal_Incident__c + 
Female_RWC_Personal_Incident__c +
Female_LWC_LT_Personal_Incident__c +
Female_PTD_Personal_Incident__c +
Female_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Female_TROI__c</fullName>
        <formula>Female_MTC_Occupational_Health__c + Female_RWC_Occupational_Health__c + Female_LWC_LT_Occupational_Health__c + Female_PTD_Occupational_Health__c + Female_Fatality_Occupational_Health__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Female TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Fire_Severity_0__c</fullName>
        <label>Fire Case - Fire Severity 0</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Fire_Severity_1__c</fullName>
        <label>Fire Case - Fire Severity 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Fire_Severity_2__c</fullName>
        <label>Fire Case - Fire Severity 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Sync_Fire_Severity_0__c</fullName>
        <label>Fire Case (Sync) - Fire Severity 0</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Sync_Fire_Severity_1__c</fullName>
        <label>Fire Case (Sync) - Fire Severity 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Case_Sync_Fire_Severity_2__c</fullName>
        <label>Fire Case (Sync) - Fire Severity 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Consequence_Work_Related_Injury_S__c</fullName>
        <label>High Consequence Work Related Injury (S)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Consequence_Work_Related_Injury__c</fullName>
        <label>High Consequence Work Related Injury</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Potential_Incident_Sync__c</fullName>
        <label>High Potential Incident (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Potential_Incident__c</fullName>
        <label>High Potential Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Potential_Work_Related_Incident_S__c</fullName>
        <label>High Potential Work Related Incident (S)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Potential_Work_Related_Incident__c</fullName>
        <label>High Potential Work Related Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_FAC_Occupational_Health__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Male FAC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_FAC_Personal_Incident__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Male FAC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Fatality_Occupational_Health__c</fullName>
        <label>Male Fatality - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Fatality_Personal_Incident__c</fullName>
        <label>Male Fatality - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_LTI__c</fullName>
        <formula>Male_LWC_LT_Personal_Incident__c +
Male_PTD_Person_Incident__c +
Male_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_LWC_LT_Occupational_Health__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Male LWC/LT - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_LWC_LT_Personal_Incident__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Male LWC/LT - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_MTC_Occupational_Health__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Male MTC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_MTC_Personal_Incident__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Male MTC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_PTD_Occupational_Health__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Male PTD - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_PTD_Person_Incident__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Male PTD - Person Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_RWC_Occupational_Health__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Male RWC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_RWC_Personal_Incident__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Male RWC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_FAC_Occupational_Health__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Male (Sync) FAC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_FAC_Personal_Incident__c</fullName>
        <inlineHelpText>FAC = First Aid Case</inlineHelpText>
        <label>Male (Sync) FAC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_Fatality_Occupational_Health__c</fullName>
        <label>Male (Sync) Fatality-Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_Fatality_Personal_Incident__c</fullName>
        <label>Male (Sync) Fatality - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_LTI__c</fullName>
        <formula>Male_Sync_LWC_LT_Personal_Incident__c +
Male_Sync_PTD_Person_Incident__c +
Male_Sync_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male (Sync) LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_LWC_LT_Occupational_Health__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Male (Sync) LWC/LT - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_LWC_LT_Personal_Incident__c</fullName>
        <inlineHelpText>LWC/LT = Loss Work Case / Lost Time</inlineHelpText>
        <label>Male (Sync) LWC/LT - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_MTC_Occupational_Health__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Male (Sync) MTC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_MTC_Personal_Incident__c</fullName>
        <inlineHelpText>MTC = Medical Treatment Case</inlineHelpText>
        <label>Male (Sync) MTC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_PTD_Occupational_Health__c</fullName>
        <inlineHelpText>PTD = Permanent Total Disability</inlineHelpText>
        <label>Male (Sync) PTD - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_PTD_Person_Incident__c</fullName>
        <inlineHelpText>PIT = Permanent Total Disability</inlineHelpText>
        <label>Male (Sync) PTD - Person Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_RWC_Occupational_Health__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Male (Sync) RWC - Occupational Health</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_RWC_Personal_Incident__c</fullName>
        <inlineHelpText>RWC = Restricted Work Case</inlineHelpText>
        <label>Male (Sync) RWC - Personal Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_TRC__c</fullName>
        <formula>Male_Sync_MTC_Personal_Incident__c +
Male_Sync_RWC_Personal_Incident__c +
Male_Sync_LWC_LT_Personal_Incident__c +
Male_Sync_PTD_Person_Incident__c +
Male_Sync_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male (Sync) TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Sync_TROI__c</fullName>
        <formula>Male_Sync_MTC_Occupational_Health__c + Male_Sync_RWC_Occupational_Health__c + Male_Sync_LWC_LT_Occupational_Health__c + Male_Sync_PTD_Occupational_Health__c + Male_Sync_Fatality_Occupational_Health__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male (Sync) TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_TRC__c</fullName>
        <formula>Male_MTC_Personal_Incident__c + 
Male_RWC_Personal_Incident__c + 
Male_LWC_LT_Personal_Incident__c +
Male_PTD_Person_Incident__c +
Male_Fatality_Personal_Incident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_TROI__c</fullName>
        <formula>Male_MTC_Occupational_Health__c + Male_RWC_Occupational_Health__c + Male_LWC_LT_Occupational_Health__c + Male_PTD_Occupational_Health__c + Male_Fatality_Occupational_Health__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Male TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Order__c</fullName>
        <formula>IF(TEXT(Month__c) = &apos;January&apos;, 1 ,
IF(TEXT(Month__c) = &apos;February&apos;, 2 ,
IF(TEXT(Month__c) = &apos;March&apos;, 3 ,
IF(TEXT(Month__c) = &apos;April&apos;, 4 ,
IF(TEXT(Month__c) = &apos;May&apos;, 5 ,
IF(TEXT(Month__c) = &apos;June&apos;, 6 ,
IF(TEXT(Month__c) = &apos;July&apos;, 7 ,
IF(TEXT(Month__c) = &apos;August&apos;, 8 ,
IF(TEXT(Month__c) = &apos;September&apos;, 9 ,
IF(TEXT(Month__c) = &apos;October&apos;, 10 ,
IF(TEXT(Month__c) = &apos;November&apos;, 11 ,
IF(TEXT(Month__c) = &apos;December&apos;, 12, 0))))))))))))</formula>
        <label>Month Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Near_Miss_Process_Safety_Sync__c</fullName>
        <label>Near Miss (Process Safety) (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Near_Miss_Process_Safety__c</fullName>
        <label>Near Miss (Process Safety)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Near_Miss_Sync__c</fullName>
        <label>Near Miss (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Near_Miss__c</fullName>
        <label>Near Miss</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Compliance_Incident_Sync__c</fullName>
        <label>Non-Compliance Incident (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Compliance_Incident__c</fullName>
        <label>Non-Compliance Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Spill_Sync__c</fullName>
        <label>Oil Spill (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Spill__c</fullName>
        <label>Oil Spill</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Tier_1_2_related_MOC__c</fullName>
        <label>PSE Tier 1+2, related MOC</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Tier_1_2_related_PTW__c</fullName>
        <label>PSE Tier 1+2, related PTW</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Incident_Sync__c</fullName>
        <label>Process Incident (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Incident__c</fullName>
        <label>Process Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_S_Safety_Indicator_PSE_Tier1_F__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier1 F</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_S_Safety_Indicator_PSE_Tier2_F__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier2 F</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_S_Safety_Indicator_PSE_Tier3_F__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier3 F</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Challenge_Sync__c</fullName>
        <label>Process Safety Challenge (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Challenge__c</fullName>
        <label>Process Safety Challenge</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_1_Fire__c</fullName>
        <label>Process Safety Indicator-PSE Tier 1 Fire</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_1__c</fullName>
        <label>Process Safety Indicator-PSE Tier 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_2_Fire__c</fullName>
        <label>Process Safety Indicator-PSE Tier 2 Fire</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_2__c</fullName>
        <label>Process Safety Indicator-PSE Tier 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_3_Fire__c</fullName>
        <label>Process Safety Indicator-PSE Tier 3 Fire</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Safety_Indicator_PSE_Tier_3__c</fullName>
        <label>Process Safety Indicator-PSE Tier 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Sync_Safety_Indicator_PSE_Tier_1__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Sync_Safety_Indicator_PSE_Tier_2__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Sync_Safety_Indicator_PSE_Tier_3__c</fullName>
        <label>Process (S) Safety Indicator-PSE Tier 3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Sync__c</fullName>
        <label>Quality (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>SD_Company__c</referenceTo>
        <relationshipName>Staff_Injury</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>SD_Zone__c</referenceTo>
        <relationshipName>Staff_Injury</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Incident_Sync__c</fullName>
        <label>Security Incident (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Incident__c</fullName>
        <label>Security Incident</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Group__c</fullName>
        <label>Staff Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>TES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_LTI__c</fullName>
        <formula>Male_LTI__c + Female_LTI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sync_LTI__c</fullName>
        <formula>Male_Sync_LTI__c + Female_Sync_LTI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Sync) LTI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sync_TRC__c</fullName>
        <formula>Male_Sync_TRC__c + Female_Sync_TRC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Sync) TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sync_TROI__c</fullName>
        <formula>Male_Sync_TROI__c + Female_Sync_TROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Sync) TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TRC__c</fullName>
        <formula>Male_TRC__c + Female_TRC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TROI__c</fullName>
        <formula>Male_TROI__c + Female_TROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Violation_Sync__c</fullName>
        <label>Violation (Sync)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Violation__c</fullName>
        <label>Violation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Site__c</fullName>
        <label>Work Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Sriracha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>